load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

cc_library(
    name = "graph",
    hdrs = ["graph.hpp"],
)

cc_test(
    name = "test_graph",
    srcs = ["test_graph.cc"],
    deps = [
        ":graph",
        "@com_google_googletest//:gtest_main",
    ],
)

pybind_extension(
    name = "graph_lib",
    srcs = ["graph_bind.cc"],
    deps = [
        ":graph",
    ],
)

py_library(
    name = "graph_lib_so",
    data = [":graph_lib.so"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_py_graph",
    srcs = ["test_graph.py"],
    data = ["graph_lib.so"],
    main = "test_graph.py",
)
